--- a/works/aula01_ex03_scene.html
+++ b/works/aula01_ex03_scene.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Basic Scene</title>
-    <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../html/resources/default.css">
+    <link rel="shortcut icon" href="./../favicon.ico">
+    <link rel="stylesheet" href="./../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
 <body>
   <div id="webgl-output">
-    <script type="module" src="aula03_ex03.js"></script>
+    <script type="module" src="aula01_ex03.js"></script>
   </div>
 </body>
 
