--- a/works/aula01_ex02.html
+++ b/works/aula01_ex02.html
@@ -22,7 +22,10 @@
       plano base.
     </p>
 
-    <iframe src="./aula01_ex02_scene.html" title="Aula 01 Exercício 02"></iframe>
+    <iframe
+      src="./aula01_ex02_scene.html"
+      title="Aula 01 Exercício 02"
+    ></iframe>
     <a href="./aula01_ex02_scene.html" target="_blank">Open in a new tab</a>
   </body>
 </html>
