--- a/works/aula02_ex01_scene.html
+++ b/works/aula02_ex01_scene.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Aula 02 Exercício 01</title>
-  <link rel="shortcut icon" href="../favicon.ico" />
-  <link rel="stylesheet" href="../html/resources/default.css" />
+  <link rel="shortcut icon" href="./../favicon.ico" />
+  <link rel="stylesheet" href="./../html/resources/default.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
