começando exercícios aulas 3 e 4

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,24 +1,45 @@
 <html lang="en">
-	<head>
-    		<title>CG</title>
-		<meta charset="utf-8">
-		<script src="resources/page.js"></script>
-		<link type="text/css" rel="stylesheet" href="resources/page.css" />
-	</head>
-	<body>
-		<h1>Computer Graphics Course</h1>
-		<br>
-		<hr>
 
-		<p>On this page you will find the basic projects that support the Computer Graphics course at [link:https://www2.ufjf.br/ufjf/ UFJF].</p>
+<head>
+	<title>CG</title>
+	<meta charset="utf-8">
+	<script src="resources/page.js"></script>
+	<link type="text/css" rel="stylesheet" href="resources/page.css" />
+	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</head>
 
-		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web.</p>
+<body>
+	<h1>Computer Graphics Course</h1>
+	<br>
+	<hr>
 
-		<h2>Contents</h2>
+	<p>On this page you will find the basic projects that support the Computer Graphics course at
+		[link:https://www2.ufjf.br/ufjf/ UFJF].</p>
 
-		<p>You will find in this page projects regarding geometric models, 3D object modeling, scene and virtual camera concepts and topics about lighting and texture usage. </p>
+	<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used
+		to create and display animated 3D graphics on the web.</p>
 
-		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented reality.</p>
-		<hr>
-	</body>
+	<h2>Contents</h2>
+
+	<p>You will find in this page projects regarding geometric models, 3D object modeling, scene and virtual camera
+		concepts and topics about lighting and texture usage. </p>
+
+	<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented
+		reality.</p>
+	<hr>
+	<br>
+
+	<div>
+		<div style="width: 50%; margin: 0 auto;">
+			<blockquote class="twitter-tweet">
+				<p lang="en" dir="ltr">In terms of CGI quality, this is where we should’ve stopped <a
+						href="https://t.co/zTuEY6NQzS">pic.twitter.com/zTuEY6NQzS</a></p>&mdash; Nelly (@LateNightNelly)
+				<a href="https://twitter.com/LateNightNelly/status/1454884335832600578?ref_src=twsrc%5Etfw">October 31,
+					2021</a>
+			</blockquote>
+		</div>
+	</div>
+
+</body>
+
 </html>
