--- a/works/trabalho01.html
+++ b/works/trabalho01.html
@@ -4,9 +4,9 @@
 <head>
   <title></title>
   <meta charset="utf-8" />
-  <script src="./../../html/resources/list.js"></script>
-  <script src="./../../html/resources/page.js"></script>
-  <link type="text/css" rel="stylesheet" href="./../../html/resources/page.css" />
+  <script src="./../html/resources/list.js"></script>
+  <script src="./../html/resources/page.js"></script>
+  <link type="text/css" rel="stylesheet" href="./../html/resources/page.css" />
 </head>
 
 <body>
