--- a/works/trabalho01.html
+++ b/works/trabalho01.html
@@ -19,7 +19,7 @@
   </p>
 
   <iframe src="./trabalho01_scene.html" title="Trabalho 01"></iframe>
-  <a href="./trabalho01_scene.html" target="_blank">Open in a new tab</a>
+  <p>Caso os controles não funcionem, <a href="./trabalho01_scene.html" target="_blank">abra em uma nova guia</a></p>
 </body>
 
 </html>
