--- a/works/aula05_ex01.html
+++ b/works/aula05_ex01.html
@@ -15,7 +15,15 @@
   <hr />
 
   <p>
-    <li>Texto</li>
+    <li>Este exercício consiste na criação do ambiente demonstrado no slide anterior composto por um teapot, três
+      esferas e um tórus.</li>
+    <li>Basicamente será criado um TeapotBufferGeometry branco que será iluminado por 3 spots de luz, sendo um vermelho,
+      um verde e um azul.</li>
+    <li>As fontes de luz serão representadas por pequenas esferas dispostas sobre um torus que limita seu movimento.
+    </li>
+    <li>Deverão ser mapeadas teclas para movimentar cada uma das luzes de forma circular.</li>
+    <li>Todas as fontes de luz devem criar sombra do teapot sobre o plano.</li>
+    <li>Mapeie teclas para ligar e desligar cada uma das luzes.</li>
   </p>
 
   <iframe src="./aula05_ex01_scene.html" title="Aula 05 Exercício 01"></iframe>
