--- a/works/aula06_ex01.html
+++ b/works/aula06_ex01.html
@@ -15,15 +15,10 @@
   <hr />
 
   <p>
-    <li>Este exercício consiste na criação do ambiente demonstrado no slide anterior composto por um teapot, três
-      esferas e um tórus.</li>
-    <li>Basicamente será criado um TeapotBufferGeometry branco que será iluminado por 3 spots de luz, sendo um vermelho,
-      um verde e um azul.</li>
-    <li>As fontes de luz serão representadas por pequenas esferas dispostas sobre um torus que limita seu movimento.
-    </li>
-    <li>Deverão ser mapeadas teclas para movimentar cada uma das luzes de forma circular.</li>
-    <li>Todas as fontes de luz devem criar sombra do teapot sobre o plano.</li>
-    <li>Mapeie teclas para ligar e desligar cada uma das luzes.</li>
+    <li>Inspirando-se na imagem ao lado, combine geometrias básicas para criar um modelo de turbina eólica.</li>
+    <li>Utilize cores diferentes para a base, torre, motor e pás.</li>
+    <li>Crie também o chão (plano) onde o objeto estará apoiado.</li>
+    <li>Procure utilizar os recursos vistos na última aula para desenvolver um modelo próximo ao ilustrado ao lado.</li>
   </p>
 
   <iframe src="./aula06_ex01_scene.html" title="Aula 06 Exercício 01"></iframe>
