tradução like a boss 😎

--- a/works/aula01_ex03.html
+++ b/works/aula01_ex03.html
@@ -20,7 +20,7 @@
   </p>
 
   <iframe src="./aula01_ex03_scene.html" title="Aula 01 Exercício 03"></iframe>
-  <a href="./aula01_ex03_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula01_ex03_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
