--- a/works/aula02_ex01.html
+++ b/works/aula02_ex01.html
@@ -28,7 +28,7 @@
   </p>
 
   <iframe src="./aula02_ex01_scene.html" title="Aula 02 Exercício 01"></iframe>
-  <a href="./aula02_ex01_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula02_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
