--- a/works/aula04_ex02.html
+++ b/works/aula04_ex02.html
@@ -25,7 +25,7 @@
   </p>
 
   <iframe src="./aula04_ex02_scene.html" title="Aula 04 Exercício 02"></iframe>
-  <a href="./aula04_ex02_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula04_ex02_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
