--- a/works/aula01_ex01.html
+++ b/works/aula01_ex01.html
@@ -22,7 +22,7 @@
   </p>
 
   <iframe src="./aula01_ex01_scene.html" title="Aula 01 Exercício 01"></iframe>
-  <a href="./aula01_ex01_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula01_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
