--- a/works/aula01_ex02.html
+++ b/works/aula01_ex02.html
@@ -21,7 +21,7 @@
   </p>
 
   <iframe src="./aula01_ex02_scene.html" title="Aula 01 Exercício 02"></iframe>
-  <a href="./aula01_ex02_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula01_ex02_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
