--- a/works/aula02_ex02.html
+++ b/works/aula02_ex02.html
@@ -20,7 +20,7 @@
   </p>
 
   <iframe src="./aula02_ex02_scene.html" title="Aula 02 Exercício 02"></iframe>
-  <a href="./aula02_ex02_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula02_ex02_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
