--- a/works/aula03_ex01.html
+++ b/works/aula03_ex01.html
@@ -33,7 +33,7 @@
   </p>
 
   <iframe src="./aula03_ex01_scene.html" title="Aula 03 Exercício 01"></iframe>
-  <a href="./aula03_ex01_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula03_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
