--- a/works/aula04_ex01.html
+++ b/works/aula04_ex01.html
@@ -24,7 +24,7 @@
   </p>
 
   <iframe src="./aula04_ex01_scene.html" title="Aula 04 Exercício 01"></iframe>
-  <a href="./aula04_ex01_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula04_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
