--- a/works/aula05_ex01.html
+++ b/works/aula05_ex01.html
@@ -27,7 +27,7 @@
   </p>
 
   <iframe src="./aula05_ex01_scene.html" title="Aula 05 Exercício 01"></iframe>
-  <a href="./aula05_ex01_scene.html" target="_blank">Open in a new tab</a>
+  <a href="./aula05_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
