--- a/works/aula06_ex01.html
+++ b/works/aula06_ex01.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Aula 06 Exercício 01</title>
-  <link rel="shortcut icon" href="./../favicon.ico" />
-  <link rel="stylesheet" href="./../html/resources/default.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title></title>
+  <meta charset="utf-8" />
+  <script src="./../html/resources/list.js"></script>
+  <script src="./../html/resources/page.js"></script>
+  <link type="text/css" rel="stylesheet" href="./../html/resources/page.css" />
 </head>
 
 <body>
-  <div id="webgl-output">
-    <script type="module" src="aula06_ex01.js"></script>
-  </div>
+  <h1>Aula 06 Exercício 01</h1>
+  <br />
+  <hr />
+
+  <p>
+    <li>Inspirando-se na imagem ao lado, combine geometrias básicas para criar um modelo de turbina eólica.
+    </li>
+    <li>Utilize cores diferentes para a base, torre, motor e pás.</li>
+    <li>Crie também o chão (plano) onde o objeto estará apoiado.</li>
+    <li>Procure utilizar os recursos vistos na última aula para desenvolver um modelo próximo ao ilustrado ao lado.</li>
+  </p>
+
+  <iframe src="./aula06_ex01_scene.html" title="Aula 06 Exercício 01"></iframe>
+  <a href="./aula06_ex01_scene.html" target="_blank">Abra em uma nova guia</a>
 </body>
 
 </html>
