--- a/works/aula06_ex01.html
+++ b/works/aula06_ex01.html
@@ -15,8 +15,7 @@
   <hr />
 
   <p>
-    <li>Inspirando-se na imagem ao lado, combine geometrias básicas para criar um modelo de turbina eólica.
-    </li>
+    <li>Inspirando-se na imagem ao lado, combine geometrias básicas para criar um modelo de turbina eólica.</li>
     <li>Utilize cores diferentes para a base, torre, motor e pás.</li>
     <li>Crie também o chão (plano) onde o objeto estará apoiado.</li>
     <li>Procure utilizar os recursos vistos na última aula para desenvolver um modelo próximo ao ilustrado ao lado.</li>
