--- a/works/aula06_ex02.html
+++ b/works/aula06_ex02.html
@@ -15,8 +15,7 @@
   <hr />
 
   <p>
-    <li>Baseando-se no exemplo "animation", crie um botão "Start/Stop" que, ao ser acionado, girará as pás da turbina.
-    </li>
+    <li>Baseando-se no exemplo "animation", crie um botão "Start/Stop" que, ao ser acionado, girará as pás da turbina.</li>
     <li>Crie um slider para controlar a velocidade do giro da turbina.</li>
   </p>
 
