--- a/works/aula08_ex01.html
+++ b/works/aula08_ex01.html
@@ -17,8 +17,8 @@
   <p>
     <li>Utilize como base o código <i>raytracingExample2.js.</i></li>
     <li>Utilize as mesmas fontes de luz deste exemplo.</li>
-    <li>O cenário será alterado para ter razão de aspecto 2:1. A câmera deve ser reposicionada para ficar centralizada neste novo cenário. (para referência, o plano de fundo tem 6 unidades de largura e 3 de altura)</li>
-    <li>Os objetos que compõem o cenário estão sobre cilindros (<i>CylinderGeometry</i>) criados com parâmetros (0.5, 0.5, 1.0, 80);</li>
+    <li>O cenário será alterado para ter razão de aspecto 2:1. A câmera deve ser reposicionada para ficar centralizada neste novo cenário. (para referência, o plano de fundo tem 6 unidades de largura e 3 de altura).</li>
+    <li>Os objetos que compõem o cenário estão sobre cilindros (<i>CylinderGeometry</i>) criados com parâmetros (0.5, 0.5, 1.0, 80).</li>
     <li>Sobre os cilindros foram utilizados, da esquerda para direita, um objeto <i>TorusKnotGeometry</i>, uma esfera e um cilindro com a base menor que o topo.</li>
     <li>Todas as cores utilizadas neste exercício podem ser aproximadas.</li>
   </p>
