Adicionando fundo na pista

--- a/works/trabalho03_2.html
+++ b/works/trabalho03_2.html
@@ -14,8 +14,8 @@
   <br />
   <hr />
 
-  <iframe src="./trabalho03_scene.html" title="Trabalho 03"></iframe>
-  <p>Caso os controles não funcionem, <a href="./trabalho03_scene.html" target="_blank">abra em uma nova guia</a></p>
+  <iframe src="./trabalho03_2_scene.html" title="Trabalho 03"></iframe>
+  <p>Caso os controles não funcionem, <a href="./trabalho03_2_scene.html" target="_blank">abra em uma nova guia</a></p>
 </body>
 
 </html>
